third_party/flutter_litert/lib/src/bindings/tensorflow_lite_bindings_generated.dart


  /// Sets the deallocation callback for the registration, similarly to
  /// `TfLiteOperatorSetFree`. The function returns an error upon failure.
  ///
  /// This callback is called to deallocate the data returned by the init
  /// callback. The value passed in the `data` parameter is the value that was
  /// returned by the `init` callback. The value passed in the `user_data`
  /// parameter is the value that was passed to `TfLiteOperatorCreate`.
  /// Please refer `free` of `TfLiteRegistration` for the detail.
  int TfLiteOperatorSetFreeWithData(
    ffi.Pointer<TfLiteOperator> registration,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Pointer<ffi.Void> user_data,
          ffi.Pointer<TfLiteOpaqueContext> context,
          ffi.Pointer<ffi.Void> data,
        )
      >
    >
    free,
  ) {
    return _TfLiteOperatorSetFreeWithData(registration, free);
  }

  late final _TfLiteOperatorSetFreeWithDataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<TfLiteOperator>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Void Function(
                  ffi.Pointer<ffi.Void> user_data,
                  ffi.Pointer<TfLiteOpaqueContext> context,
                  ffi.Pointer<ffi.Void> data,
                )
              >
            >,
          )
        >
      >('TfLiteOperatorSetFreeWithData');
  late final _TfLiteOperatorSetFreeWithData =
      _TfLiteOperatorSetFreeWithDataPtr.asFunction<
        int Function(
          ffi.Pointer<TfLiteOperator>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Void Function(
                ffi.Pointer<ffi.Void> user_data,
                ffi.Pointer<TfLiteOpaqueContext> context,
                ffi.Pointer<ffi.Void> data,
              )
            >
          >,
        )
      >();

  /// Sets the preparation callback for the registration.
  ///
  /// The callback is called when the inputs of operator have been resized.
  /// Please refer `prepare` of `TfLiteRegistration` for the detail.
  ///
  /// Deprecated: Use `TfLiteOperatorSetPrepareWithData`
  void TfLiteOperatorSetPrepare(
    ffi.Pointer<TfLiteOperator> registration,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Int32 Function(
          ffi.Pointer<TfLiteOpaqueContext> context,
          ffi.Pointer<TfLiteOpaqueNode> node,
        )
      >
    >
    prepare,
  ) {
    return _TfLiteOperatorSetPrepare(registration, prepare);
  }

  late final _TfLiteOperatorSetPreparePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<TfLiteOperator>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Int32 Function(
                  ffi.Pointer<TfLiteOpaqueContext> context,
                  ffi.Pointer<TfLiteOpaqueNode> node,
                )
              >
            >,
          )
        >
      >('TfLiteOperatorSetPrepare');
  late final _TfLiteOperatorSetPrepare =
      _TfLiteOperatorSetPreparePtr.asFunction<
        void Function(
          ffi.Pointer<TfLiteOperator>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Int32 Function(
                ffi.Pointer<TfLiteOpaqueContext> context,
                ffi.Pointer<TfLiteOpaqueNode> node,
              )
            >
          >,
        )
      >();

  /// Sets the preparation callback for the registration. The function returns an
  /// error upon failure.
  ///
  /// The callback is called when the inputs of operator have been resized.  The
  /// value passed in the `user_data` parameter is the value that was passed to
  /// `TfLiteOperatorCreate`.  Please refer `prepare` of
  /// `TfLiteRegistration` for the detail.
  int TfLiteOperatorSetPrepareWithData(
    ffi.Pointer<TfLiteOperator> registration,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Int32 Function(
          ffi.Pointer<ffi.Void> user_data,
          ffi.Pointer<TfLiteOpaqueContext> context,
          ffi.Pointer<TfLiteOpaqueNode> node,
        )
      >
    >
    prepare,
  ) {
    return _TfLiteOperatorSetPrepareWithData(registration, prepare);
  }

  late final _TfLiteOperatorSetPrepareWithDataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<TfLiteOperator>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Int32 Function(
                  ffi.Pointer<ffi.Void> user_data,
                  ffi.Pointer<TfLiteOpaqueContext> context,
                  ffi.Pointer<TfLiteOpaqueNode> node,
                )
              >
            >,
          )
        >
      >('TfLiteOperatorSetPrepareWithData');
  late final _TfLiteOperatorSetPrepareWithData =
      _TfLiteOperatorSetPrepareWithDataPtr.asFunction<
        int Function(
          ffi.Pointer<TfLiteOperator>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Int32 Function(
                ffi.Pointer<ffi.Void> user_data,
                ffi.Pointer<TfLiteOpaqueContext> context,
                ffi.Pointer<TfLiteOpaqueNode> node,
              )
            >
          >,
        )
      >();

  /// Sets the invocation callback for the registration.
  ///
  /// The callback is called when the operator is executed.
  /// Please refer `invoke` of `TfLiteRegistration` for the detail.
  ///
  /// Deprecated: Use `TfLiteOperatorSetInvokeWithData`
  void TfLiteOperatorSetInvoke(
    ffi.Pointer<TfLiteOperator> registration,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Int32 Function(
          ffi.Pointer<TfLiteOpaqueContext> context,
          ffi.Pointer<TfLiteOpaqueNode> node,
        )
      >
    >
    invoke,
  ) {
    return _TfLiteOperatorSetInvoke(registration, invoke);
  }

  late final _TfLiteOperatorSetInvokePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<TfLiteOperator>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Int32 Function(
                  ffi.Pointer<TfLiteOpaqueContext> context,
                  ffi.Pointer<TfLiteOpaqueNode> node,
                )
              >
            >,
          )
        >
      >('TfLiteOperatorSetInvoke');
  late final _TfLiteOperatorSetInvoke =
      _TfLiteOperatorSetInvokePtr.asFunction<
        void Function(
          ffi.Pointer<TfLiteOperator>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Int32 Function(
                ffi.Pointer<TfLiteOpaqueContext> context,
                ffi.Pointer<TfLiteOpaqueNode> node,
              )
            >
          >,
        )
      >();

  /// Sets the invocation callback for the registration. The function returns an
  /// error upon failure.
  ///
  /// The callback is called when the operator is executed.  The value passed in
  /// the `user_data` parameter is the value that was passed to
  /// `TfLiteOperatorCreate`.  Please refer `invoke` of `TfLiteRegistration` for
  /// the detail.
  int TfLiteOperatorSetInvokeWithData(
    ffi.Pointer<TfLiteOperator> registration,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Int32 Function(
          ffi.Pointer<ffi.Void> user_data,
          ffi.Pointer<TfLiteOpaqueContext> context,
          ffi.Pointer<TfLiteOpaqueNode> node,
        )
      >
    >
    invoke,
  ) {
    return _TfLiteOperatorSetInvokeWithData(registration, invoke);
  }

  late final _TfLiteOperatorSetInvokeWithDataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<TfLiteOperator>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Int32 Function(
                  ffi.Pointer<ffi.Void> user_data,
                  ffi.Pointer<TfLiteOpaqueContext> context,
                  ffi.Pointer<TfLiteOpaqueNode> node,
                )
              >
            >,
          )
        >
      >('TfLiteOperatorSetInvokeWithData');
  late final _TfLiteOperatorSetInvokeWithData =
      _TfLiteOperatorSetInvokeWithDataPtr.asFunction<
        int Function(
          ffi.Pointer<TfLiteOperator>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Int32 Function(
                ffi.Pointer<ffi.Void> user_data,
                ffi.Pointer<TfLiteOpaqueContext> context,
                ffi.Pointer<TfLiteOpaqueNode> node,
              )
            >
          >,
        )
      >();

  /// Sets the async kernel accessor callback for the registration.
  ///
  /// The callback is called to retrieve the async kernel if the delegate supports
  /// it. If the delegate does not support async execution, either this function
  /// should not be called, or `async_kernel` needs to be nullptr.
  /// `node` is the delegate TfLiteNode created by `ModifyGraphWithDelegate`.
  /// Please refer `async_kernel` of `TfLiteRegistration` for the detail.
  ///
  /// \warning This is an experimental API and subject to change.
  /// Deprecated: Use `TfLiteOperatorSetAsyncKernelWithData`
  void TfLiteOperatorSetAsyncKernel(
    ffi.Pointer<TfLiteOperator> registration,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Pointer<TfLiteAsyncKernel> Function(
          ffi.Pointer<TfLiteOpaqueContext> context,
          ffi.Pointer<TfLiteOpaqueNode> node,
        )
      >
    >
    async_kernel,
  ) {
    return _TfLiteOperatorSetAsyncKernel(registration, async_kernel);
  }

  late final _TfLiteOperatorSetAsyncKernelPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<TfLiteOperator>,
            ffi.Pointer<
              ffi.NativeFunction<
                ffi.Pointer<TfLiteAsyncKernel> Function(
                  ffi.Pointer<TfLiteOpaqueContext> context,
                  ffi.Pointer<TfLiteOpaqueNode> node,
                )
              >
            >,
          )
        >
      >('TfLiteOperatorSetAsyncKernel');
  late final _TfLiteOperatorSetAsyncKernel =
      _TfLiteOperatorSetAsyncKernelPtr.asFunction<
        void Function(
          ffi.Pointer<TfLiteOperator>,
          ffi.Pointer<
            ffi.NativeFunction<
              ffi.Pointer<TfLiteAsyncKernel> Function(
                ffi.Pointer<TfLiteOpaqueContext> context,
                ffi.Pointer<TfLiteOpaqueNode> node,
              )
            >
          >,
        )
      >();

  /// Sets the async kernel accessor callback for the registration. The function
  /// returns an error upon failure.
  ///
  /// The callback is called to retrieve the async kernel if the delegate supports
  /// it. If the delegate does not support async execution, either this function
  /// should not be called, or `async_kernel` needs to be nullptr.  `node` is the
  /// delegate TfLiteNode created by `ModifyGraphWithDelegate`.  The value passed
  /// in the `user_data` parameter is the value that was passed to
  /// `TfLiteOperatorCreate`.  Please refer `async_kernel` of `TfLiteRegistration`
  /// for the detail.
  ///
  /// \warning This is an experimental API and subject to change.
  int TfLiteOperatorSetAsyncKernelWithData(
    ffi.Pointer<TfLiteOperator> registration,
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Pointer<TfLiteAsyncKernel> Function(
          ffi.Pointer<ffi.Void> user_data,
          ffi.Pointer<TfLiteOpaqueContext> context,
          ffi.Pointer<TfLiteOpaqueNode> node,
        )
      >
    >
    async_kernel,
  ) {
    return _TfLiteOperatorSetAsyncKernelWithData(registration, async_kernel);
  }
